--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -15,8 +15,9 @@ html {
   }
 
   //inner~max-screen
-  @media (min-width: $inner) {
+  @media (max-width: $inner) {
     font-size: 16px;
+    font-size: vw(strip-unit($inner), 16);
   }
 }
 
