--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -34,11 +34,13 @@ $bold: 700;
 //色指定（共通性のあるものは出来る限り指定すると良い）
 $base: #cbb94f;
 $base2: #cbb84f;
+$gold: #91801b;
 $baige: #f7f6f0;
 $black: #291000;
 $white: #fff;
 $red: #c38b79;
-$blue: #8390AB;
+$blue: #8390ab;
+$green: #7ca39d;
 $bg-black: #120e19;
 
 body {
