共通パーツPC

--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -34,9 +34,12 @@ $bold: 700;
 //色指定（共通性のあるものは出来る限り指定すると良い）
 $base: #cbb94f;
 $base2: #cbb84f;
-$gold: #91801b;
-$baige: #f7f6f0;
-$black: #291000;
+$ocher: #91801b;
+$ivory: #f7f6f0;
+$yellow: #e5e0c6;
+$black: #000;
+$font: #291000;
+$darkbrown: #261102;
 $white: #fff;
 $red: #c38b79;
 $blue: #8390ab;
