--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -1,6 +1,10 @@
 @use "global" as *;
 
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   height: rem(130);
   background-color: $white;
   @include mq("md") {
