--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -45,6 +45,8 @@ $red: #c38b79;
 $blue: #8390ab;
 $green: #7ca39d;
 $bg-black: #120e19;
+$lightgray: #eaeaeb;
+$lightgray2: #eaeaea;
 
 body {
   font-family: $mincho-font;
