--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -15,8 +15,10 @@ html {
   }
 
   //inner~max-screen
-  @media (max-width: $inner) {
-    font-size: vw(strip-unit($inner), 16);
+  @media (min-width: $inner) {
+    // font-size: vw(strip-unit($inner), 16);
+    // font-size: vw(1440, 16);
+    font-size: 16px;
   }
 }
 
