--- a/src/sass/module/_about-item.scss
+++ b/src/sass/module/_about-item.scss
@@ -12,39 +12,37 @@
   position: relative;
 }
 
-.about-item::before {
-  content: "";
+.about-item__title {
+  font-size: rem(28);
+  font-weight: $regular;
+  line-height: 1;
+}
+
+.about-item__img {
+  width: rem(300);
   position: absolute;
   top: 50%;
-  right: calc(50% - rem(250));
+  left: 50%;
   transform: translateY(-50%);
-  width: rem(300);
-  height: rem(212);
-  background-image: url(./../images/top/about1@2x.webp);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
   visibility: hidden;
   opacity: 0;
   transition:
     visibility 0.3s ease,
     opacity 0.3s ease;
-  @include mq("md") {
-    content: none;
-  }
+}
+
+.about-item__img img {
+  aspect-ratio: 300/212;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 @media (hover: hover) {
-  .about-item:hover::before {
+  .about-item:hover .about-item__img {
     visibility: visible;
     opacity: 1;
   }
-}
-
-.about-item__title {
-  font-size: rem(28);
-  font-weight: $regular;
-  line-height: 1;
 }
 
 .about-item__icon {
