--- a/src/sass/module/_footer.scss
+++ b/src/sass/module/_footer.scss
@@ -11,7 +11,9 @@
 
 .footer__inner {
   padding-left: rem(100);
+  padding-left: calc(100 / 1440 * 100%);
   padding-right: rem(142);
+  padding-right: calc(142 / 1440 * 100%);
   margin-inline: auto;
   @include mq(md) {
     padding: 0 rem(20);
@@ -28,13 +30,15 @@
 }
 
 .footer__left {
-  flex: 1;
+  // flex: 1;
+
   @include mq("md") {
     // width: fit-content;
   }
 }
 
 .footer__right {
+  margin-left: auto;
   width: calc(669 / 1198 * 100%);
   @include mq("md") {
     margin-top: rem(48);
@@ -83,6 +87,7 @@
 .footer__nav-lists {
   display: flex;
   gap: rem(60);
+  gap: calc(60 / 669 * 100%);
   @include mq("md") {
     flex-direction: column;
     gap: rem(30);
@@ -105,6 +110,10 @@
 .footer__nav-item a {
   padding: rem(4) 0;
   display: inline-block;
+  // font-size: rem(16);
+  // font-weight: $regular;
+  // line-height: calc(36 / 16);
+  // letter-spacing: 0.05em;
 }
 
 .footer__buttons {
