--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -6,19 +6,25 @@
   left: 0;
   right: 0;
   height: rem(130);
+  max-width: 100vw;
   background-color: $white;
+  z-index: 100;
   @include mq("md") {
     height: rem(70);
   }
 }
 
 .header__inner {
-  padding-left: min((100/1440 * 100vw), 100px);
+  padding-left: min((100/1440 * 100vw), rem(100));
   height: inherit;
   display: flex;
   align-items: center;
   @include mq("lg") {
+    padding-left: rem(50);
+  }
+  @include mq("md") {
     padding-left: rem(20);
+    width: 100%;
   }
 }
 
@@ -47,19 +53,18 @@
 
 .header__nav-item.header__nav-item--contact {
   margin-left: rem(56);
-  margin-left: min((56/1440 * 100vw), 56px);
+  margin-left: min((56/1440 * 100vw), rem(56));
   display: flex;
   align-items: center;
 }
 
 .header__nav-item a {
-  padding: 0 rem(24);
-  padding: 0 min((24/1440 * 100vw), 24px);
+  padding: 0 min((24/1440 * 100vw), rem(24));
   height: inherit;
   display: flex;
   align-items: center;
   font-size: rem(16);
-  font-size: clamp(10px, (16/1440 * 100vw), 16px);
+  font-size: clamp(10px, (16/1440 * 100vw), rem(24));
   font-weight: $regular;
   line-height: 1;
 }
@@ -67,7 +72,7 @@
 .header__nav-item span {
   position: relative;
   padding-right: rem(22);
-  padding-right: min((22/1440 * 100vw), 22px);
+  padding-right: min((22/1440 * 100vw), rem(22));
 }
 
 .header__nav-item span::after {
@@ -85,7 +90,7 @@
 
 .header__nav-item.header__nav-item--contact a {
   padding: 0 rem(59);
-  padding: 0 min((59/1440 * 100vw), 59px);
+  padding: 0 min((59/1440 * 100vw), rem(59));
   position: relative;
   color: $white;
   background-color: $base;
@@ -169,13 +174,13 @@
   position: absolute;
   z-index: 900;
   top: 0;
-  right: -120%;
+  right: -100%;
   width: 100%;
   height: 100dvh;
   background-color: $base;
   overflow-y: scroll;
   scrollbar-width: none;
-  transition: 0.6s;
+  transition: right 0.6s ease;
   display: none;
 }
 
