--- a/src/sass/module/_section-head.scss
+++ b/src/sass/module/_section-head.scss
@@ -27,3 +27,11 @@
     font-size: 12px;
   }
 }
+
+.section-head--small {
+  @extend .section-head;
+}
+
+.section-head--small .section-head__en {
+  font-size: rem(24);
+}
