--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -47,6 +47,7 @@ $green: #7ca39d;
 $bg-black: #120e19;
 $lightgray: #eaeaeb;
 $lightgray2: #eaeaea;
+$bg-light: #f8f8f8;
 
 body {
   font-family: $mincho-font;
