--- a/src/sass/module/_intro.scss
+++ b/src/sass/module/_intro.scss
@@ -38,7 +38,7 @@
   position: relative;
   z-index: 1;
   width: calc(598 / 1262 * 100%);
-  filter: opacity(0.9);
+  // filter: opacity(0.9);
   // background-color: rgba($white, 0.5);
   // mix-blend-mode: multiply;
 }
