--- a/src/sass/module/_info-card.scss
+++ b/src/sass/module/_info-card.scss
@@ -7,6 +7,13 @@
   row-gap: rem(28);
 }
 
+.info-card__link {
+  display: inherit;
+  grid-template-rows: inherit;
+  grid-row: inherit;
+  row-gap: inherit;
+}
+
 .info-card__img img {
   aspect-ratio: 278/196;
   width: 100%;
