--- a/src/sass/module/_about.scss
+++ b/src/sass/module/_about.scss
@@ -13,6 +13,9 @@
   margin-top: rem(56);
   display: flex;
   gap: min((146/1232 * 100vw), rem(146));
+  @include mq("md") {
+    flex-direction: column;
+  }
 }
 
 .about__text {
@@ -22,4 +25,18 @@
 
 .about__body {
   flex: 1;
+}
+
+.about__schedule {
+  margin-top: rem(90);
+  padding: rem(72) rem(66);
+  background-color: $white;
+  text-align: center;
+}
+
+.about__schedule-head {
+}
+
+.about__schedule-body {
+  margin-top: rem(56);
 }
