--- a/src/sass/module/_activity-cards.scss
+++ b/src/sass/module/_activity-cards.scss
@@ -16,6 +16,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  background-color: $red;
 }
 
 .activity-card__img {
@@ -34,7 +35,6 @@
   flex-direction: column;
   flex-grow: 1;
   padding: rem(48) rem(36);
-  background-color: $red;
 }
 
 .activity-card__head {
@@ -72,9 +72,10 @@
 }
 
 .activity-card__text {
-  margin-top: rem(37);
+  margin-top: rem(36);
   flex-grow: 1;
   color: $white;
+  text-align: justify;
   @include mq(md) {
     margin-top: rem(25);
     font-size: rem(16);
@@ -87,15 +88,12 @@
   justify-content: center;
 }
 
-.activity-card--blue,
-.activity-card--green {
+.activity-card--blue {
   @extend .activity-card;
-}
-
-.activity-card--blue .activity-card__body {
   background-color: $blue;
 }
 
-.activity-card--green .activity-card__body {
+.activity-card--green {
+  @extend .activity-card;
   background-color: $green;
 }
