--- a/src/sass/module/_footer.scss
+++ b/src/sass/module/_footer.scss
@@ -10,11 +10,11 @@
 }
 
 .footer__inner {
-  padding-left: rem(100);
-  padding-left: calc(100 / 1440 * 100%);
-  padding-right: rem(142);
-  padding-right: calc(142 / 1440 * 100%);
-  margin-inline: auto;
+  // padding-left: rem(100);
+  // padding-left: calc(100 / 1440 * 100%);
+  // padding-right: rem(142);
+  // padding-right: calc(142 / 1440 * 100%);
+  // margin-inline: auto;
   @include mq(md) {
     padding: 0 rem(20);
     max-width: rem(600);
@@ -23,6 +23,7 @@
 
 .footer__wrapper {
   display: flex;
+  max-width: rem(1198);
   @include mq("md") {
     flex-direction: column;
     // flex-wrap: wrap;
@@ -58,7 +59,7 @@
 }
 
 .footer__info {
-  margin-top: rem(48);
+  margin-top: rem(32);
   @include mq("md") {
     margin-top: rem(24);
   }
@@ -84,6 +85,10 @@
   text-transform: initial;
 }
 
+.footer__nav {
+  padding-top: rem(12);
+}
+
 .footer__nav-lists {
   display: flex;
   gap: rem(60);
@@ -101,15 +106,20 @@
 }
 
 .footer__nav-items {
-  margin-top: rem(20);
+  margin-top: rem(16);
 }
 
 .footer__nav-item {
+  font-size: rem(16);
+  font-weight: $regular;
+  font-family: $gothic-font;
+  line-height: 2;
+  letter-spacing: 0.05em;
 }
 
 .footer__nav-item a {
-  padding: rem(4) 0;
-  display: inline-block;
+  padding: rem(2) 0;
+  display: block;
   // font-size: rem(16);
   // font-weight: $regular;
   // line-height: calc(36 / 16);
@@ -137,9 +147,9 @@
 }
 
 .footer__links {
-  margin-top: rem(36);
+  margin-top: rem(26);
   display: flex;
-  gap: 3em;
+  gap: rem(52);
   @include mq("md") {
     justify-content: center;
     gap: 2em;
