--- a/src/sass/module/_info-cards.scss
+++ b/src/sass/module/_info-cards.scss
@@ -4,4 +4,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: rem(40);
+  @include mq("md") {
+    grid-template-columns: 1fr;
+  }
 }
