--- a/src/sass/module/_infomation.scss
+++ b/src/sass/module/_infomation.scss
@@ -9,6 +9,9 @@
 .infomation__container {
   display: flex;
   gap: rem(52);
+  @include mq("md") {
+    flex-direction: column;
+  }
 }
 
 .infomation__aside {
@@ -21,8 +24,8 @@
 
 .infomation__tab-menu {
   margin-top: rem(56);
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(auto, rem(75)));
   column-gap: rem(12);
   row-gap: rem(13);
 }
@@ -34,7 +37,7 @@
 .infomation__tab-menu-item.is-active {
   background-color: $black;
   color: $white;
-  border: none;
+  border: 1px solid $black;
 }
 
 .infomation__button {
