--- a/src/sass/module/_label-category.scss
+++ b/src/sass/module/_label-category.scss
@@ -4,17 +4,19 @@
   font-family: $gothic-font;
   background-color: $black;
   color: $white;
-  padding: rem(5) rem(10);
+  padding: rem(4) rem(8);
   width: fit-content;
   font-size: rem(14);
   font-weight: $regular;
   line-height: 1;
   letter-spacing: 0.05em;
+  border: 1px solid $black;
 }
 
 .label-category--white {
   @extend .label-category;
   background-color: $white;
   color: $black;
+  padding: rem(4) rem(7);
   border: 1px solid $lightgray;
 }
