--- a/src/sass/module/_member-card.scss
+++ b/src/sass/module/_member-card.scss
@@ -27,14 +27,14 @@
   font-weight: $regular;
   line-height: 1;
   background-color: $white;
-  padding: rem(20) rem(48) rem(20) rem(20);
+  padding: rem(26) rem(48) rem(14) rem(20);
 }
 
 .member-card__body {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  padding: 0 rem(20) rem(39);
+  padding: rem(2) rem(20) rem(32);
   background-color: $white;
 }
 
@@ -47,6 +47,6 @@
 }
 
 .member-card__text {
-  margin-top: rem(36);
+  margin-top: rem(32);
   flex-grow: 1;
 }
