--- a/src/sass/module/_footer.scss
+++ b/src/sass/module/_footer.scss
@@ -40,7 +40,7 @@
 
 .footer__right {
   margin-left: auto;
-  width: calc(669 / 1198 * 100%);
+  width: rem(669);
   @include mq("md") {
     margin-top: rem(48);
     width: 100%;
@@ -115,15 +115,36 @@
   font-family: $gothic-font;
   line-height: 2;
   letter-spacing: 0.05em;
+  list-style-position: inside;
+}
+
+.footer__nav-item::marker {
+  content: "・";
+  // margin-right: rem(10);
 }
 
 .footer__nav-item a {
   padding: rem(2) 0;
-  display: block;
+  display: inline-block;
   // font-size: rem(16);
   // font-weight: $regular;
   // line-height: calc(36 / 16);
   // letter-spacing: 0.05em;
+}
+
+.footer__nav-item span {
+  position: relative;
+}
+
+.footer__nav-item span::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 1px;
+  background-color: $white;
+  transition: width 0.3s ease;
 }
 
 .footer__buttons {
@@ -156,8 +177,27 @@
   }
 }
 
-.footer__policy {
+.footer__link {
+  position: relative;
 }
 
-.footer__link {
+.footer__link::after {
+  content: "";
+  position: absolute;
+  bottom: 4px;
+  left: 0;
+  width: 0;
+  height: 1px;
+  background-color: $white;
+  transition: width 0.3s ease;
+}
+
+@media (hover: hover) {
+  .footer__nav-item:hover span::after {
+    width: 100%;
+  }
+
+  .footer__link:hover::after {
+    width: 100%;
+  }
 }
